--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@
       <source src="resources/videos/excursion.mp4" type="video/mp4">
       Your browser does not support the video tag.
     </video>
-
+    <h2>Your personal travel guide</h2>
+    <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
+    <img src="resources/images/camp.jpg" alt="tents on ground">
+    <img src="resources/images/phone.png" alt="cell phone icon">
+    <h2>Coming Soon for iPhone and Android</h2>
+    <a href="">Download Excursion (Coming soon!)</a>
+    <footer>&copy; Excursion</footer>
   </body>
 </html>
