Layout mostly complete.

--- a/index.html
+++ b/index.html
@@ -1,7 +1,13 @@
-<!-- classes, tags, IDs list
-#h1 - header
-
-
+<!-- HTML classes, tags, IDs list for CSS
+body
+h1 - header
+h2 - the subheadings
+footer - the copyright
+#credits - copyright ID
+video
+img
+a - links
+p - description
 -->
 
 
@@ -10,6 +16,7 @@
   <head>
     <meta charset="utf-8">
     <title>Excursion</title>
+    <link href="resources/css/normalize.css" type="text/css" rel="stylesheet">
     <link href="resources/css/style.css" type="text/css" rel="stylesheet">
   </head>
   <body>
@@ -25,6 +32,6 @@
     <img src="resources/images/phone.png" alt="cell phone icon">
     <h2>Coming Soon for iPhone and Android</h2>
     <a href="">Download Excursion (Coming soon!)</a>
-    <footer>&copy; Excursion</footer>
+    <footer id="credits">&copy; Excursion</footer>
   </body>
 </html>
