--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ p - description
   <body>
     <h1>Discover hidden places in the world around you</h1>
     <a href="">Download Excursion (Coming soon!)</a>
-    <video width="" height="" autoplay muted>
+    <video width="" height="" autoplay muted loop>
       <source src="resources/videos/excursion.mp4" type="video/mp4">
       Your browser does not support the video tag.
     </video>
